<resources>
    <string name="app_name">控制助手</string>
    <string name="action_settings">Settings</string>

    <!-- common -->
    <string name="crash">很抱歉，程序遭遇异常，即将退出</string>
    <string name="digital_number">0123456789</string>
    <string name="digital_number_point">0123456789.</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>

    <string name="company_name">深圳市施美森科技有限公司</string>

    <!-- 网络和请求相关 -->
    <string name="netConnectedError">网络异常，请稍后再试！</string>
    <string name="requestError">请求发生错误</string>

    <!-- 登录 -->
    <string name="login_button_text">登录</string>
    <string name="login_input_hint_username">请输入用户名</string>
    <string name="login_input_hint_pwd">请输入密码</string>
    <string name="login_err_poor_network">网络异常，请稍后再试！</string>
    <string name="login_pwd_format_error">请输入正确的密码！</string>
    <string name="login_request_error">请求异常</string>

    <!-- 对话框 -->
    <string name="dialog_btn_ok">确定</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_exit_confirm_title">退出</string>
    <string name="dialog_exit_confirm_content">正在操作，是否确定退出？</string>
    <string name="dialog_common_loading">正在加载&#8230;&#8230;&#8230;</string>
    <string name="dialog_common_submitting">正在提交&#8230;&#8230;&#8230;</string>

    <string name="tab_setting">示教</string>
    <string name="tab_run">运行</string>
    <string name="tab_file">文件</string>
    <string name="tab_connect">联机</string>

    <!-- 联机 -->
    <string name="scan">扫描</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="connect_list_no">序号</string>
    <string name="connect_list_ip_addr">IP地址</string>
    <string name="connect_list_device_name">设备名称</string>
    <string name="connect_list_desc">描述</string>
    <string name="connect_hint">当前已经连接：</string>
    <string name="select_hint">当前选择：</string>
    <string name="not_select_hint">请先点选主机</string>
    <string name="no_host_hint">尚未扫描到设备</string>

    <!-- 文件 -->
    <string name="file_new">新建</string>
    <string name="file_open">打开</string>
    <string name="file_save">保存</string>
    <string name="file_save_as">另存</string>
    <string name="file_list_no">序号</string>
    <string name="file_list_cmd">指令</string>
    <string name="file_list_param">参数</string>
    <string name="file_list_memo">注释</string>

    <!-- 运行 -->
    <string name="play_launch">启动</string>
    <string name="play_pause">暂停</string>
    <string name="play_stop">结束</string>
    <string name="play_reset">复位</string>

    <string name="play_label_run_time_total">运行次数</string>
    <string name="play_label_finished_times">已运行</string>
    <string name="play_label_device_status">设备状态</string>
    
    <string name="running_status_no_connection">未连接</string>
    <string name="running_status_idle">空闲</string>
    <string name="running_status_running">运行中</string>
    <string name="running_status_error">出错</string>

    <!-- 示教 -->
    <string name="setting_btn_motion">运动</string>
    <string name="setting_btn_io">IO</string>
    <string name="setting_btn_delay">延时</string>
    <string name="setting_btn_del">删除</string>

    <string name="setting_sub_motion">插入运动指令</string>
    <string name="setting_sub_io">插入IO指令</string>
    <string name="setting_sub_delay">插入延时指令</string>

    <string name="create_new_error">请填写完全</string>

    <!-- 文件选择器 -->
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>

</resources>
